
Key to developers
-----------------

- DP   Dave Page
- AP   Andreas Pflug
- JMP  Jean-Michel Poure
- HS   Hiroshi Saito
- AHP  Adam H. Pendleton
- MP   Marc Persuy
- DAP  Darko Prenosil
- FGP  Florian G. Pflug
- MH   Magnus Hagander
- GL   Guillaume Lelarge

Changes
-------

Date       Dev Ver    Change details
---------- --- -----  --------------
2008-03-04 DP  1.8.3  Show the schema correctly for EDB public synonyms that 
                      point to other synonyms.
2008-03-04 DP  1.8.3  Remove long-dead Explain Text option from the Query Tool.
2008-03-03 DP  1.9.0  Add the ability to register external applications on
                      a plugins menu. Menu options can be activated based on
                      the current object selection, and a variety of variables
                      including everything needed to open a database connection
                      can be passed to the external utility.
2008-02-27 DP  1.9.0  Allow the user a chance to abort if there is an error
                      when deleting rows in the edit grid [Robins Tharakan]
2008-02-27 DP  1.9.0  Remove an obsolete FORCE option on the Maintenance 
                      dialogue [Robins Tharakan]
2008-02-27 DP  1.8.3  Properly quote synonym names when refreshing.
2008-02-27 DP  1.9.0  Add basic support for function parameter default values
                      on EnterpriseDB.
2008-02-26 DP  1.8.3  Parse function parameter names correctly when they
                      contain commas.
2008-02-24 DP  1.8.3  FOSDEM fix: Include overriding columns in reverse
                      engineered SQL for child tables, rather than commenting
                      them out and marking as inherited.
2008-02-20 DP  1.8.3  Avoid quoting 'text' when used as a type name per Erwin.
2008-02-18 DP  1.8.3  Correctly generate table DDL when inherited columns
                      follow the last 'real' column, per Peter Gagarinov.