@@ -157,6 +157,8 @@ protected:
     friend class pgQueryThread;
 
 private:
+    wxString qtString(const wxString& value);
+
     bool features[32];
     int minorVersion, majorVersion;
     bool isEdb;
