@@ -36,7 +36,9 @@ Changes
 
 Date       Dev Ver    Change details
 ---------- --- -----  --------------
-2008-03-04 DP  1.8.3  Show the schema correctly for EDB public synonyms that 
+2008-03-04 DP  1.8.3  Properly quote the maintenance database name when 
+                      creating a new connection.
+2008-03-04 DP  1.8.3  Show the schema correctly for EDB public synonyms that
                       point to other synonyms.
 2008-03-04 DP  1.8.3  Remove long-dead Explain Text option from the Query Tool.
 2008-03-03 DP  1.9.0  Add the ability to register external applications on
